2004-05-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-connection.[ch] (gda_connection_create_table,
	gda_connection_drop_table): new functions.

2004-05-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/xml/gda-xml-provider.c (get_types): added missing fields to
	the returned schema, and added missing types, since the XML provider
	supports all the types in libgda (except GOBJECT and BLOB).

	* doc/C/libgda-docs.sgml: use newer DocBook DTD.

2004-05-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-server-provider.[ch]: added 'create_table' and 'drop_table'
	virtual methods.
	(gda_server_provider_create_table, gda_server_provider_drop_table): new
	functions.

	* libgda/gda-connection.c (gda_connection_get_schema): added information
	about what to do with the returned value.

2004-05-01  Rodrigo Moya <rodrigo@ximian.com>

	* libgda/gda-server-provider.[ch]: added 'get_last_insert_id' virtual
	method.
	(gda_server_provider_get_last_insert_id): new function.
	(gda_server_provider_class_init): initialize new virtual method.

	* libgda/gda-connection.[ch] (gda_connection_get_last_insert_id): new
	function.

	* providers/postgres/gda-postgres-provider.c
	(gda_postgres_provider_get_last_insert_id): implemented new method.

	* providers/postgres/gda-postgres-recordset.[ch]
	(gda_postgres_recordset_get_pgresult): new function.

	* providers/mysql/gda-mysql-provider.c
	(gda_mysql_provider_get_last_insert_id): implemented new method.

2004-04-28  Murray Cumming  <murrayc@murrayc.com>
 
 	* libgda/gda-field.[h|c]: Added gda_field_attribute_equal().

2004-04-23  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-field.c (gda_field_attribute_copy): Don't copy the
	default_value if it is 0, to avoid runtime warnings.
	* libgda/gda-client.c: (gda_client_notify_error_event, 
	gda_client_notify_transction_started_event, 
	gda_client_notify_transaction_committed_event, 
	gda_client_notify_transaction_cancelled_event): Cast the objects to